--- a/vlone-main.html
+++ b/vlone-main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="vlone-main.css">
     <title>Vlone</title>
+    <link type="image/x-icon" href="https://github.com/GaterSt1/KFC_1/blob/main/logo-vlone-negro-784x1024.png?raw=true" rel="shortcut icon">
 </head>
 <body>
 
@@ -41,21 +42,30 @@
 
 <!--Main-->
 <div>
-<p class="Novelties">Recent novelties of the season</p>
+<h3 class="Novelties">Recent novelties of the season</h3>
 </div>
 
 <div>
-<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_neverbrokeagain.png?raw=true" alt="" class="t-shirt_for_novelty_neverbrokeagain"></a>
-<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_juicewrldpng.png?raw=true" alt="" class="t-shirt_for_novelty_juicewrld"></a>
-<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_sakura.png?raw=true" alt="" class="t-shirt_for_novelty_sakura"></a>
 
+<div class="neverbrokeagain-img-text">
+<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_neverbrokeagain.png?raw=true" alt="" class="t-shirt_for_novelty_neverbrokeagain"></a>
 <p class="name_t-shirt_neverbrokeagain">Vlone X Never Broke Again Bones T-Shirt Black</p>
+</div>
+
+<div class="juicewrld-img-text">
+<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_juicewrldpng.png?raw=true" alt="" class="t-shirt_for_novelty_juicewrld"></a>
 <p class="name_t-shirt_juicewrld">Vlone x Juice WRLD <br> T-Shirt Black</p>
+</div>
+
+<div class="sakura-img-text">
+<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/t-shirt_for_novelty_sakura.png?raw=true" alt="" class="t-shirt_for_novelty_sakura"></a>
 <p class="name_t-shirt_sakura">Vlone Sakura Logo <br> T-Shirt Black</p>
 </div>
 
+</div>
+
 <div>
-<p class="Collaborations">Collaborations</p>
+<h3 class="Collaborations">Collaborations</h3>
 </div>
 
 <div class="fon_for_collaborations_buttons">
