--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
 <h3 class="Collaborations">Collaborations</h3>
 </div>
 
-<div class="fon_for_collaborations_buttons">
-
 <form action="#">
 <button class="button_neverbrokeagain">Never Broke Again</button>
 </form>
@@ -90,15 +88,19 @@
 <button class="button_neighborhood">Neighborhood</button>
 </form>
 
-</div>
+
 <!--Main-->
 
 
-<!--Bottom-->
-<div class="fon_for_bottom"></div>
-<!--Bottom-->
+<!--Footer-->
+<div>
 
+<div class="fon_for_footer"></div>
 
+<a href="index.html"> <img class="logo_two" src="https://github.com/GaterSt1/KFC_1/blob/main/logo-vlone-white-784x1024%20.png?raw=true" alt=""></a>
+
+</div>
+<!--Footer-->
 
 </body>
 </html>
