--- a/vlone-delivery.html
+++ b/vlone-delivery.html
@@ -57,6 +57,13 @@
 <span class="second-text text"></span>
 <!--Main-->
 
+<!--Footer-->
+
+<div class="fon_for_footer"></div>
+
+<a href="index.html"> <img class="logo_two" src="https://github.com/GaterSt1/KFC_1/blob/main/logo-vlone-white-784x1024%20.png?raw=true" alt=""></a>
+
+<!--Footer-->
 
 
 </div>
