--- a/vlone-directory.html
+++ b/vlone-directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="vlone-directory.css">
     <title>Vlone</title>
     <link type="image/x-icon" href="https://github.com/GaterSt1/KFC_1/blob/main/logo-vlone-negro-784x1024.png?raw=true" rel="shortcut icon">
 </head>
@@ -42,7 +42,7 @@
 
 <!--Main-->
 <div>
-<h3 class="Novelties">Recent novelties of the season</h3>
+<h3 class="Directory_two">Directory</h3>
 </div>
 
 <div>
@@ -62,35 +62,32 @@
 <p class="name_t-shirt_sakura">Vlone Sakura Logo <br> T-Shirt Black</p>
 </div>
 
+<div class="palmangels-img-text">
+<a href="#"> <img src="https://raw.githubusercontent.com/GaterSt1/KFC_1/main/Vlone%20Vlone%20X%20Palm%20Angels%20Hoodie.webp" alt="" class="t-shirt_for_directory_palmangels"></a>
+<p class="name_hoodie_palmangels">Vlone X Palm Angels <br> Hoodie Black</p>
+</div>
+    
+<div class="rodmancheetah-img-text">
+<a href="#"> <img src="https://raw.githubusercontent.com/GaterSt1/KFC_1/main/Vlone%20x%20Dennis%20Rodman%20Cheetah%20Hoodie%20White%20Back.webp" alt="" class="hoodie_for_directory_rodmancheetah"></a>
+<p class="name_hoodie_rodmancheetah">Vlone X Dennis Rodman Cheetah <br> Hoodie Black</p>
+</div>
+    
+<div class="neighborhood-img-text">
+<a href="#"> <img src="https://raw.githubusercontent.com/GaterSt1/KFC_1/main/Vlone%20x%20Neighborhood%20Skull%20Tee%20Black%20Forward.webp" alt="" class="t-shirt_for_directory_neighborhood"></a>
+<p class="name_t-shirt_neighborhood">Vlone X Neighborhood <br> T-Shirt Black</p>
 </div>
 
-<div>
-<h3 class="Collaborations">Collaborations</h3>
+<div class="palmangels_two-img-text">
+<a href="#"> <img src="https://github.com/GaterSt1/KFC_1/blob/main/Vlone%20Vlone%20X%20Palm%20Angels%20T-Shirt.png?raw=true" alt="" class="t-shirt_for_directory_palmangels_two"></a>
+<p class="name_t-shirt_palmangels_two">Vlone X Palm Angels <br> T-Shirt White</p>
 </div>
 
-<form action="#">
-<button class="button_neverbrokeagain">Never Broke Again</button>
-</form>
+</div>
 
-<form action="#">
-<button class="button_juicewrld">Juice WRLD</button>
-</form>
 
-<form action="#">
-<button class="button_rodman">Rodman</button>
-</form>
-
-<form action="#">
-<button class="button_palmangels">Palm Angels</button>
-</form>
-
-<form action="#">
-<button class="button_neighborhood">Neighborhood</button>
-</form>
 
 
 <!--Main-->
-
 
 <!--Footer-->
 <div>
